# FILE_ACTIVITY

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  build.bat  config.yaml  dev_server.py  file_activity.spec  main.py  pack.py  pyproject.toml  requirements-accel.txt  requirements-dev.txt  requirements-elastic.txt  requirements-mcp.txt  requirements-playground.txt  requirements-tray.txt  requirements.txt  runtime_hook.py  setup.py  verify_install.bat
.github/: dependabot.yml  pull_request_template.md
deploy/: auto-update.ps1  deploy.ps1  install.bat  install.ps1  install_service.ps1  install_tray.ps1  servers_template.csv  service_install.bat  service_install_v2.bat  setup-source.ps1  setup.ps1  uninstall.bat  uninstall_service.ps1  update.bat
docker/: Dockerfile.test  README.md  docker-compose.test.yml
docs/: DEPLOY-2026-07-17-burculogo.md  PLAN-silme-forensik-menu.md  README.md  mcp_server.md  operator-runbook.md  playground.md  project-diagram.html  troubleshooting.md
scripts/: Configure-FileAudit.ps1  audit_buttons.py  audit_sth.py  bench_api.py  bench_scanner.py  bench_storage.py  check_inline_js.py  ci_guards.py  collect_diag.py  config_migrations.yaml  explain_audit.py  init_db.py  migrate_config.py  onenote_export.py  run-tests.sh  spike_duckdb_vs_sqlite.py
tests/: conftest.py  test_acl_analyzer.py  test_ai_insights.py  test_analytics_per_query.py  test_analyzer_cache.py  test_approval_safety.py  test_approvals.py  test_archive_confirm_gate.py  test_archive_job_worker.py  test_audit_chain.py  test_audit_sth.py  (+110 more)
(+167 files in other folders)
