[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "file-activity"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Windows Dosya Paylaşım Analiz ve Arşivleme Sistemi"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0",
    "ldap3>=2.9.1",
]

[project.optional-dependencies]
windows = ["pywin32>=311"]
mcp = ["mcp>=1.0.0", "httpx>=0.27.0"]

[project.scripts]
"file-activity" = "main:cli"
"file-activity-mcp" = "src.mcp_server.server:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
